# golioth-zephyr-sdk

./: .checkpatch.conf  .ci-west-zephyr.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitlint  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Kconfig  README.rst  Review.md  gitpod.yml  west-external.yml  west-ncs.yml  west-zephyr.yml  west.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/disabled_workflows/: test_mimxrt1060.yml  test_nrf9160dk.yml
.github/workflows/: build_test.yml  checkpatch.yml  docs.yml  firebase-doxygen-main.yml  firebase-doxygen-pr.yml  gitlint.yml  hello_world.yml  pre-commit.yml  test_dfu_nrf52840dk.yml  test_golioth_image.yml  test_mimxrt1060.yml  test_nrf52840dk.yml  test_nrf9160dk.yml  twister_dfu_nrf52840dk.yml
.github/workflows/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.gitpod/: .gitpod.Dockerfile
app_support/: Kconfig
app_support/wifi/: wifi.c
bootloader/mcuboot_espressif/: CMakeLists.txt  Kconfig
bootloader/mcuboot_native_sim/: CMakeLists.txt  Kconfig  mcuboot.py
docs/: .firebaserc  .gitignore  README.md  firebase.json
docs/doxygen/: Doxyfile  main.md
include/golioth/compat/: init.h
include/logging/: golioth.h
include/net/: golioth.h
include/net/golioth/: fw.h  golioth_type_def.h  lightdb.h  req.h  rpc.h  (+6 more)
include/qcbor/: posix_error_map.h
lib/: CMakeLists.txt
lib/qcbor/: CMakeLists.txt  posix_error_map.c
logging/: CMakeLists.txt  Kconfig  log_backend_golioth.c
mgmt/: CMakeLists.txt  Kconfig
mgmt/mcumgr/: CMakeLists.txt  Kconfig  cfg_mgmt.c
net/: CMakeLists.txt  Kconfig
net/golioth/: CMakeLists.txt  Kconfig  coap_req.c  coap_req.h  coap_utils.c  coap_utils.h  fw.c  golioth.c  golioth_utils.c  golioth_utils.h  lightdb.c  lightdb_helpers.c  ot_dns.c  ot_dns.h  pathv.h  rpc.c  settings.c  stream.c  system_client.c  zcbor_any_skip_fixed.c  zcbor_any_skip_fixed.h  zcbor_utils.c  zcbor_utils.h
net/sockets/: CMakeLists.txt  Kconfig  sockets_offload_poll_wrapper.c
net/wifi/: CMakeLists.txt  Kconfig  wifi.c
patches/hal_espressif/: 0001-hal-wifi-esp32s2-add-adapter-layer.patch  0002-hal-wifi-esp32s2-make-some-wifi-files-common.patch  0003-hal-wifi-esp32-use-common-wifi-files.patch  0004-clock-add-soc-specific-clock-functions.patch  0005-hal-wifi-add-support-of-wifi-subsystem-for-esp32c3.patch  0006-hal-esp32c3-bt-revert-interrupt-allocator-calls.patch
patches/zephyr/: 0001-drivers-wifi-esp-do-not-wait-at-the-end-of-ESP-chip-.patch  0001-drivers-wifi-esp32-create-event-handling-thread-in-r.patch  0001-logging-add-log_msg_timestamp_to_us-helper-function.patch  0001-logging-add-log_output_timestamp_to_us-helper-functi.patch  0001-west.yml-esp32-update-clock-configuration-calls.patch  0002-drivers-wifi-esp-do-not-wait-at-the-end-of-ESP-chip-.patch  0002-libc-minimal-implement-time-API.patch  0002-soc-riscv-esp32c3-add-support-for-wifi-system.patch  0003-net-sockets-improve-DGRAM-recvfrom-on-NET_OFFLOAD-if.patch  0003-soc-riscv-esp32c3-add-wlog_rodada-section.patch
samples/basics/: CMakeLists.txt  Kconfig  overlay-minimal-nrf52840dk.conf  overlay-minimal-nrf9160dk.conf  overlay-minimal.conf  prj.conf
samples/certificate_provisioning/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/common/: CMakeLists.txt  Kconfig  Kconfig.defconfig  hardcoded_credentials.c  net_connect.c  nrf91_lte_monitor.c  runtime_psk.conf  runtime_settings.conf  settings_autoload.c  settings_golioth.c  settings_shell.c  wifi.c
samples/dfu/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  prj.conf  sample.yaml  sysbuild.cmake
samples/dfu/boards/: esp32.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160_ns.conf  nucleo_h745zi_q_m7.overlay  particle_xenon.overlay  qemu_x86.conf
samples/dfu/pytest/: build_info.py  conftest.py  test_sample.py
samples/dfu/src/: esp_clk_init.c  flash.c  flash.h  main.c  wifi.c
samples/gps/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/hello/: CMakeLists.txt  Kconfig  README.rst  overlay-auth-cert.conf  overlay-qemu-ppp.conf  overlay-tls.conf  overlay-unsecure.conf  prj.conf  sample.yaml
samples/hello_sporadic/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/libcoap/: CMakeLists.txt  prj.conf
samples/lightdb/: Kconfig  README.rst  overlay-logging.conf  prj.conf  sample.yaml
samples/lightdb-stream/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/lightdb_led/: README.rst  prj.conf  sample.yaml
samples/lightdb_led_ack/: README.rst  prj.conf
samples/lightdb_stream/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/logging/: Kconfig  README.rst  prj.conf  sample.yaml
samples/nrf91-gps/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/rpc/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/settings/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/settings/boards/: circuitdojo_feather_nrf9160ns.conf  esp32.conf  nrf52840dk_nrf52840.conf  nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_ns.conf
samples/settings/src/: bt.c  hwinfo.c  main.c  mcumgr.c  settings.c
samples/shell/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/test/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  verify.py
scripts/: nat_config.py  requirements-tests.txt  west-commands.yml
scripts/gitlint/: commit_rules.py
scripts/python/golioth/: README.md  pyproject.toml
scripts/python/golioth/golioth/: __init__.py  cli.py  golioth.py
scripts/west_commands/: patch.py
snippets/golioth-sample/: qemu_x86.conf  snippet.yml
tests/coap_utils/: CMakeLists.txt  prj.conf  testcase.yaml
tests/connected_diconnected/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lightdb/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/lightdb/resources/get/: big-1024.json  big-2048.json  small.json
tests/lightdb/scripts/: golioth-setup.py  golioth-setup.sh  resource_to_c.py
tests/lightdb/src/: main.c
zephyr/: module.yml
(+157 files in other folders)
